可以循环读取智联招聘的搜索列表了。

--- a/JobSeeker/智联招聘搜索页面源码解析.MD
+++ b/JobSeeker/智联招聘搜索页面源码解析.MD
@@ -151,25 +151,13 @@ data_filter = {
 </div>
 ```
 
-我需要的信息有：职位名称、公司名称、工作城市、工作性质、公司规模、学历要求、发布日期。
-其实每一条记录中，仅找到这7个信息就足够了。
+## 获取搜索结果的数量
+虽然每页只能显示40条信息，但是在页面上方还是会显示一共有多少条搜索结果。如“”
+代码如下：
 
-从这个DIV中可以看到，一共有一个`UL`列表和一个`DL`列表。
-
-
-- `UL`中：
-    - 职位名称：第1个`Li`的唯一的`A`元素文本
-    - 公司名称：第2个`Li`的唯一的`A`元素文本
-    - 工作城市：第3个`Li`的第1个`span`元素文本
-    - 工作性质：第3个`Li`的第2个`span`元素文本
-    - 公司规模：第3个`Li`的第3个`span`元素文本
-    - 学历要求：第3个`Li`的第4个`span`元素文本
-- `DL`中：
-    - 更新时间：第1个`p`元素文本
-
-那么解析这个页面的流程就是：
-
-1. 找到`id`为`newlist_list_content_table`的DIV，即大容器  
-2. 在大容器中搜索多条`class`为`newlist_detail newlist`的DIV，然后逐条解析  
-3. 解析定位每条招聘信息的重要信息，并进行存储  
+```html
+<span class="search_yx_tj">
+    共<em>2025</em>个职位满足条件
+</span>
+```
 
