添加跳转页面获取招聘详细信息功能

--- a/JobSeeker/智联招聘-搜索页面源码解析.MD
+++ b/JobSeeker/智联招聘-搜索页面源码解析.MD
@@ -1,38 +1,43 @@
-# 智联招聘搜索网页源码解析
+# 网页源码解析 - 智联招聘搜索列表 
+一开始必须要解析智联招聘搜索列表页，从这里更方便实现各种深层级数据抓取。
 网页地址是：
-`http://sou.zhaopin.com/jobs/searchresult.ashx`
+http://sou.zhaopin.com/jobs/searchresult.ashx
 
 ## 搜索参数
-Get方式传递的搜索参数收集到了这些，也是目前最常用的：
+智联招聘的服务器只接收Get方式，如果用Post方式抓取页面，则不会返回想要的招聘信息，而会得到一堆广告。
+下面是我手动测试的一些智联在这个页面Get方式传递的搜索参数，也是目前最常用的（注释掉的不怎么常用）：
 ```Python
 data_filter = {
-    'sm' : '0', # 显示模式：列表'0',详细'1'。显示不同、源码也不同，尽量选列表模式，源码更好解析。
+    'kw' : keyword, # 搜索关键词
+    'sm' : '0', # 显示方式代码： 列表是'0',详细是'1'。显示不同源码也不同，尽量选列表模式，源码更好解析。
+    'jl' : '北京', # 搜索城市：'北京'，多项用'+'连接(URL编码为%2B)
     #'bj' : '', # 职位类别代码：互联网产品/运营管理 的代码为 '160200'，多项用'%3B'连接(URL编码的%)
     #'in' : '', # 行业代码：多项用';'连接(URL编码为%3B)
-    'jl' : '北京', # 搜索城市：'北京'，多项用'+'连接(URL编码为%2B)
-    'kw' : '', # 搜索关键词
     'kt' : '0', # 关键词搜索范围：全文'0' | 公司名'1' | 职位名'2'
     'isadv' : '0', # 是否高级搜索：快速搜索'0' | 高级搜索'1'
-    'isfilter' : '1', # 是不是筛选器： '0' | '1'
-    'ispts' : '', # 通常为 '1'
+    # 'isfilter' : '1', # 是不是筛选器： '0' | '1'
+    # 'ispts' : '', # 通常为 '1'
     #'sj' : '', # 职位子类别代码：
-    #'gc' : '', # 地铁线路： '5号'
-    #'ga' : '', # 地铁站名或地名： '天通苑南' 、 '小汤山'
-    'sb' : '0', # 排序方式代码：默认排序是'0',相关度排序是'1', 首发日排序是'2'
+    # 'gc' : '5号', # 地铁线路： '5号'
+    # 'ga' : '立水桥', # 地名或地铁站名： '天通苑南' 、 '小汤山'
+    # 'sb' : '0', # 排序方式代码：默认排序是'0',相关度排序是'1', 首发日排序是'2'
     #'fjt' : '10000', # 职位标签 五险一金'10000' 年底双薪'10001' 绩效奖金'10002' 等等
-    'sf' : '-1', # 月薪底线：'8001' 不限是'-1'
-    'st' : '-1', # 月薪上限：'10000' 不限是'-1'
-    'ct' : '-1', # 公司性质代码
-    'el' : '-1', # 学历代码
-    'we' : '-1', # 工作经验代码
-    'et' : '-1', # 职位类型代码：兼职'1' 全职'2' 实习'4'
-    'pd' : '-1', # 发布时间(天数)：一周是'7'，一个月是'30'，不限是'-1'
-    'p' : '1', # 页码，超出总页码时，则会显示最后一页
+    # 'sf' : '-1', # 月薪底线：'8001' 不限是'-1'
+    # 'st' : '-1', # 月薪上限：'10000' 不限是'-1'
+    # 'ct' : '-1', # 公司性质代码
+    # 'el' : '-1', # 学历代码
+    # 'we' : '-1', # 工作经验代码
+    # 'et' : '-1', # 职位类型代码：兼职'1' 全职'2' 实习'4'
+    # 'pd' : '-1', # 发布时间(天数)：一周是'7'，一个月是'30'，不限是'-1'
+    'p' : page, # 页码，超出总页码时，则会显示最后一页
     #'gr' : '', # 
-    #'' : '', #
+    # 're' : '2015', # 这个限制了搜素数量，但是其实也不是按年份搜索
+    'sg' : guid, # 即全网唯一标示符——GUID
     #'' : '' #
 }
 ```
+它在python中的用法，就是通过urllib.urlencode()来转成URL参数格式，并提交。
+
 
 ## 网页源码解析 - “列表模式”
 如果解析“列表模式”的智联招聘网页，需要在Get参数里面的sm设为`0`。
@@ -95,16 +100,13 @@ data_filter = {
 - 公司名称： class = "gsmc"  
 - 职位月薪： class = "zwyx" 或 <span>职位月薪：xx</span>  
 - 工作地点： class = "gzdd" 或 <span>地点：xx</span>  
-- 更新时间： class = "gxsj"  
+- 更新时间： class = "gxsj" 或 <li><p>12-10</p></li>  
 - 公司性质： <span>公司性质：xx</span>  
 - 公司规模： <span>公司规模：xx</span>  
 - 学历要求： <span>学历：xx</span>  
-- 岗位职责： <li>学历：xx</li>  
+- 岗位职责： <li>岗位职责：xx</li>  
 
 其实还有tag的嵌套层级和顺序，可以用来定位信息。但是我不想这么做，因为这个太不稳定了，而且大大的增加了代码的长度，如果不存在信息还会导致报错。相比而言，用中文的人能理解的语言来进行正则匹配，更有成功率，且更容易操作。
-
-
-
 
 
 ## 网页源码解析 - “详细模式”
@@ -151,7 +153,9 @@ data_filter = {
 </div>
 ```
 
-## 获取搜索结果的数量
+在源码上，虽然“详细模式”的解析和“列表模式”有很大的不同，几个信息的抓取方式不一样，但是却可以共用。如有的是按照class名，有的是按照tag名等。但是这不影响两种模式放在一起解析——为每一个信息元素如“月薪”、“公司名称”等，设置多种搜索方式。在写代码时，只要分别检索多种方式就可以获得数据。具体参考抓取代码的实现。
+
+## 获取搜索结果数量
 虽然每页只能显示40条信息，但是在页面上方还是会显示一共有多少条搜索结果。如“”
 代码如下：
 
@@ -161,3 +165,33 @@ data_filter = {
 </span>
 ```
 
+## 获取GUID——全局唯一标识符
+虽然没有研究过GUID，但是我看到智联招聘的网页会在URL中显示的调用，参数名为`sg`。
+不知道它对爬虫有什么影响。不过我还是尝试着获取了一下，很简单直接用id搜索input标签的value就行。网页源码如下：
+```html
+<input type="hidden" id="guid" value="6857d119ab0147938da7b78b4c18f857" />
+```
+
+## 获取当前页码及下一页的链接地址
+智联招聘这个页面最逗的是，如果当前信息只有4页，那么及时url参数中页码指定100，它仍然不会自动跳转。所以从url或者`.geturl()`来判断当前真实页码也就成了不对了。
+不过好在一点，这个页面下方的`页码控制栏`中可以清楚的看到当前页码是多少，所以就从这里入手。这部分网页源码如下：
+```html
+<div class="pagesDown" style="_width:570px">
+<ul>
+    <li><a class="pre-page nopress">上一页</a></li><li><a href="#" class="current" >1</a></li>
+    <li><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=2">2</a></li>
+    <li><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=3">3</a></li>
+    <li><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=4">4</a></li>
+    <li><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=5">5</a></li>
+    <li><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=6">6</a></li>
+    <li><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=7">7</a></li>
+    <li><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=8">8</a></li>
+    <li><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=9" class="pagesmore">...</a></li>
+    <li class="pagesDown-pos"><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=2" class="next-page">下一页</a>
+    <li class="nextpagego-box"><input type="hidden" id="guid" value="c67ae20d31954238959da7915552c240" />到&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;页<input type="text" class="pagesnum" name="goto" id="goto" value="1" onkeyup="zlapply.searchjob.fnCheckInt(this,event)" onchange="zlapply.searchjob.fnCheckInt(this,event)" onkeypress="zlapply.searchjob.enter2Page(this,event,51)"  /><button type="button" class="nextpagego-btn" name="go" onclick="zlapply.searchjob.gotoPage(this.form.goto.value,51,'','c67ae20d31954238959da7915552c240')"></button></li>
+    <li class="clearfix"></li>
+</ul>
+</div>
+```
+从中可以看到，当前页码的定位极其方便，只要从`class="pagesDown"`的div中找到`class="current"`的a链接就得到了。
+同理，下一页的链接可以找`class="next-page"`的a标签获取href值。
