能够完整的获取某关键词涉及的所有职位、企业信息，就差加入数据库了

--- a/JobSeeker/智联招聘-招聘信息页面源码解析.MD
+++ b/JobSeeker/智联招聘-招聘信息页面源码解析.MD
@@ -2,10 +2,10 @@
 根据招聘列表里面跳转过来的详细招聘信息页面。爬虫再根据这里进行关键信息提取。
 相比于搜索列表页来说，这页内容很简单，而我们需要的也不多。
 不过需要注意的是，这里在职业信息之外还需要额外收集企业信息。
-虽然另外有专门的代码跳转到企业主页去搜集信息，但是阅读源码后发现，每家VIP企业都可以自己定制网页，因此获取基本信息不方便。
+虽然另外有专门的代码跳转到企业主页去搜集信息，但是阅读源码后发现，每家Special企业都可以自己定制网页，因此获取基本信息不方便。
 所以企业基本信息要在这一页就收集齐（基本信息和企业主页里是完全一样的）。
 下面开始简单分析下各处源码。
-
+[TOC]
 ## 职位的头信息
 ```html
 <div class="inner-left fl">
@@ -91,18 +91,58 @@
 
 # 网页源码解析 - 企业主页
 
-智联招聘的企业主页分为2种：普通主页和VIP主页。VIP主页是智联招聘里唯一能够让企业自己定制的页面了。
+智联招聘的企业主页分为2种：标准主页和Special主页。Special主页是智联招聘里唯一能够让企业自己定制的页面了。
 这也就形成了千奇百怪的源码，分析起来并不容易。不过好在企业的基本信息，在招聘页面就已经获得了。
 剩下唯一需要的信息就是企业的`所有招聘信息`了，也是非常重要的地方。
 招聘信息在2种不同主页中，在源码中也分为了2种构建方式：
-- 普通主页：正常的tag循环陈列
-- VIP 主页：在javascript中以list列表变量形式储存，并动态显示出来。
+- 标准主页   ：正常的tag循环陈列。域名统一是`http://special.zhaopin.com/`这样的
+- Special主页：在javascript中以list列表变量形式储存，并动态显示出来。域名统一是`http://company.zhaopin.com/`这样的。
 
-### 不过说回来，这也是不确定的解析，因为变化太多了，我只是随机打开了一些页面参考，不能代表全部。其实，最好的方法是在搜索页面直接按公司名称搜索，就得到他所有的招聘信息了。
+## 隐藏的“标准主页”
+在研究Special主页源码中，有很大的不确定性。不过索性发现了一个“好玩的”东西：
+```html
+<td align="right"><!--<a href="http://company.zhaopin.com/CC252448519.htm" target="_blank" style="color:#ffffff;">招聘职位标准页面</a>-->&nbsp;</td>
+```
+其中链接和内容是被注释掉的，增加了获取的难度。不顾BeautifulSoup还是可以搜到它的，作为Comment对象存在。
 
-那么下面开始进行2种源码的分析。
+#### 这意味着什么？那就意味着——每个自定义的主页，实际上还是存在着一个“标准版”主页的，那样就容易解析了。
 
-## 普通企业主页
+## 企业ID获取
+其实也没什么大作用，不过如果方便获取，拿到它也是不错的，因为毕竟是一家企业在智联的数据库中唯一的标识吗！
+通过观察，企业ID在企业主页的URL、源码中都频频出现：例如A公司的ID是`121017111`在URL中有时是`CC1210/1711/`，有时是`CC121017111.htm`，有时是`1210171119251740.htm`，还有`pagepublish/12101711/index.html`这样的。而在源码中经常会在Javascript脚本中出现，如`CC121017111J90251741000`这样的或是`CC121017111J90250035000_530_1`这样的。
+首先可以确定的是，企业ID一般是**9位纯数字**组成。
+如上面URL中的如果以ID作为目录名则会时而减去最后1位变成8位，暂时不知道为什么，也许他们的目录必须在8位以下吧。
+下面就来解析一下几种已知的出现方式和获取方式。
+
+### 标准主页中的企业ID：
+- 网址是`http://company.zhaopin.com/CC220397616.htm`的
+    0. 在URL中就可以获取ID，去掉`CC`和文件扩展名即是9位的ID`220397616`。
+    0. 最直接的，脚本中会找到`<input type="hidden" value="CC220397616" id="companyNumber" />`这样的代码，直接可以通过`id="companyNumber"`找到企业ID。
+    0. 在JS脚本中可以看到`var arrVarFromASP = ['CC220397616'];`这样的变量。
+    0. 在JS脚本中可以看到这样的链接跳转：
+
+    ```html
+    <a href="javascript:void(0)" onclick="applyjob('CC220397616J90250044000_530_1_66_101__2_');return false;" class="applyJob">申请职位</a>
+    <a href="javascript:void(0);" onclick="saveJobTerminalApply('CC220397616J90250044000_530_1'); return false;" class="collectJob">收藏职位</a>
+    ```
+
+        可以发现，`CC220397616J90250044000_530_1_66_101__2_`无论多长，企业ID总是`CC`的9位数字，而从`J`开头，就是具体的**职位ID**了。
+    0. 源码中有`<a href="http://sou.zhaopin.com/jobs/companysearch.ashx?CompID=CC220397616">公司内搜索</a>`会发现这样的链接标签，参数`CompID`即是。
+    0. 源码中有`<a href="http://jobs.zhaopin.com/220397616250038.htm" target="_blank">【全职】助理分析师 可即刻上崗</a>`这样的链接表情，在文件名`220397616250038.htm`中，前9位是企业ID，后6位`250038`为职位ID。
+    0. 
+
+### Special主页中的企业ID：
+Special主页中确定的信息并不多，唯一确定会出现企业ID的就是招聘链接的URL中了：
+
+```html
+<a href="http://jobs.zhaopin.com/286304915250270.htm?ssidkey=y&ff=02&ss=101" target="_blank" title="实习生（长期招聘）">实习生（长期招聘）</a>
+```
+将URL中的文件名获取，并得到前9位数字就是了。
+
+获取完标准页面链接后，就可以开始解析了。因为标准页面的链接也不一定能获取到，所以Special页面的分析也简单看一看。
+以下为两种企业主页的源码分析。
+
+## 标准企业主页
 ```html
 <div class="part4 positionList" id="morecity">
 <h3>
@@ -138,8 +178,8 @@
 ```
 可以看到，大容器是class中含有`positionList`的div。其中每条招聘信息都是`class="positionListContent"`的div，职位链接其实非常好找，找到`class="jobName"`的span标签获取其下a链接的href地址就好了。
 
-## VIP企业主页
-实际上VIP企业主页也不全都是以下的构建方式，发现了一些少数的大公司，会完全不一样，通过代码来看，是真没什么办法的。。。
+## Special企业主页
+实际上Special企业主页也不全都是以下的构建方式，发现了一些少数的大公司，会完全不一样，通过代码来看，是真没什么办法的。。。
 ```html
 <SCRIPT language=JavaScript>
 var arrJobList = 
@@ -174,4 +214,5 @@ function BuildJlist(){
 </SCRIPT>
 ```
 可以看到，该企业所有的招聘信息都存在Javascript脚本中的叫`arrJobList`的变量里了。变量的格式为：`arrJobList=[[第1条招聘信息],[第2条招聘信息]]`，是列表嵌套列表。而每条招聘信息数据的内容为：`["职位名称","招聘网址","所在地点","城市代码","行业名称","行业代码","企业名称","企业代码","发布日期","0","未知编号"]`
-其实这个地方，难点就在于怎么在python中获取Javascript脚本中的变量……
+其实这个地方，难点就在于怎么在python中获取Javascript脚本中的变量。
+
