--- a/JobSeeker/智联招聘-搜索页面源码解析.MD
+++ b/JobSeeker/智联招聘-搜索页面源码解析.MD
@@ -81,10 +81,10 @@ data_filter = {
                 <dl>
                     <dt>
                         <a href="javascript:void(0)" onclick="return zlapply.searchjob.ajaxApplyBrig1('CC575878820J90250640000_530','ssi','_1_03_201__2_')">
-                            <img src="/assets/images/newlist_sqimg_03.jpg" />
+                            
                         </a>
                     </dt>
-                    <dd><a href="javascript:zlapply.searchjob.saveOne('CC575878820J90250640000_530')"><img src="/assets/images/newlist_scimg_06.jpg" /></a></dd>
+                    <dd><a href="javascript:zlapply.searchjob.saveOne('CC575878820J90250640000_530')"></a></dd>
                 </dl>
             </div>
         </div>
@@ -144,10 +144,10 @@ data_filter = {
             <p>12-07</p>
             <dt>
                 <a href="javascript:void(0)" onclick="return zlapply.searchjob.ajaxApplyBrig1('CC255550019J90256441000_530', 'ssi' , '_1_03_201__2_' ) ">
-                    <img src="/assets/images/newlist_sqimg_03.jpg" />
+                    
                 </a>
             </dt>
-            <dd><a href="javascript:zlapply.searchjob.saveOne('CC255550019J90256441000_530')"><img src="/assets/images/newlist_scimg_06.jpg" /></a></dd>
+            <dd><a href="javascript:zlapply.searchjob.saveOne('CC255550019J90256441000_530')"></a></dd>
         </dl>
     </div>
 </div>
