重构框架。强化代码逻辑和效率。1.将抽化的抽象函数提取出为一个模块 2.强化bsText（）搜索函数，适应极多搜索方式。3.改变数据获取逻辑：先一遍把所有职位搜素页面的结果提取出来。再单独开启招聘页面和企业主页的信息提取。三者不再互相嵌套，以防被未知情况中断，加强稳定性。

--- a/JobSeeker/智联招聘数据爬取准备(1)-搜索列表源码解析.MD
+++ b/JobSeeker/智联招聘数据爬取准备(1)-搜索列表源码解析.MD
@@ -62,7 +62,7 @@ data_filter = {
     <td class="zwmc" style="width: 250px;">
         <input type="checkbox" name="vacancyid" value="CC575878820J90250640000_530_1_03_201__1_" onclick="zlapply.uncheckAll('allvacancyid')" />
         <div style="width: 224px;*width: 218px; _width:200px; float: left">
-            <a style="font-weight: bold" par="ssidkey=y&amp;ss=201&amp;ff=03" href="http://jobs.zhaopin.com/575878820250640.htm" target="_blank">会计（<b>数据</b>）</a>
+            <a style="font-weight: bold" par="ssidkey=y&ss=201&ff=03" href="http://jobs.zhaopin.com/575878820250640.htm" target="_blank">会计（<b>数据</b>）</a>
         </div>
     </td>
     <td style="width: 60px;" class="fk_lv"><span>87%</span></td>
@@ -95,16 +95,16 @@ data_filter = {
 在“列表”模式中，每一条记录采用了Table格式，第一个TR是简述信息，第二个TR是扩展信息。简述信息中，每个信息都有固定Class属性，而且是非空信息，是肯定能获取到的。而扩展信息中，规则性不强，只能用“公司性质：xx”这样的正则表达式来匹配或是用tag的嵌套层级和顺序来定位，成功率和稳定性都不高。
 总结一下，这里的主要定位方式为：
 
-- 职位名称： class = "zwmc"  
-- 反馈率  ： class = "fk_lv"  
-- 公司名称： class = "gsmc"  
-- 职位月薪： class = "zwyx" 或 <span>职位月薪：xx</span>  
-- 工作地点： class = "gzdd" 或 <span>地点：xx</span>  
-- 更新时间： class = "gxsj" 或 <li><p>12-10</p></li>  
-- 公司性质： <span>公司性质：xx</span>  
-- 公司规模： <span>公司规模：xx</span>  
-- 学历要求： <span>学历：xx</span>  
-- 岗位职责： <li>岗位职责：xx</li>  
+- 职位名称： `class = "zwmc"`  
+- 反馈率  ： `class = "fk_lv"`  
+- 公司名称： `class = "gsmc"`  
+- 职位月薪： `class = "zwyx"` 或 `<span>职位月薪：xx</span> ` 
+- 工作地点： `class = "gzdd"` 或 `<span>地点：xx</span>`  
+- 更新时间： `class = "gxsj"` 或 `<li><p>12-10</p></li>  `
+- 公司性质： `<span>公司性质：xx</span>`  
+- 公司规模： `<span>公司规模：xx</span>`  
+- 学历要求： `<span>学历：xx</span>` 
+- 岗位职责： `<li>岗位职责：xx</li>`  
 
 其实还有tag的嵌套层级和顺序，可以用来定位信息。但是我不想这么做，因为这个太不稳定了，而且大大的增加了代码的长度，如果不存在信息还会导致报错。相比而言，用中文的人能理解的语言来进行正则匹配，更有成功率，且更容易操作。
 
@@ -127,7 +127,7 @@ data_filter = {
     <div class="clearfix">
         <ul>
             <li class="newlist_deatil_first clearfix zwmc"><input type="checkbox" name="vacancyid" value="CC255550019J90256441000_530_1_03_201__1_" onclick=" zlapply.uncheckAll('allvacancyid') " /><div style="width:300px;float:left">
-                <a style="font-weight: bold" par="ssidkey=y&amp;ss=201&amp;ff=03" href="http://jobs.zhaopin.com/255550019256441.htm" target="_blank">
+                <a style="font-weight: bold" par="ssidkey=y&ss=201&ff=03" href="http://jobs.zhaopin.com/255550019256441.htm" target="_blank">
                 行政后勤经理</a></div></li>
             <li class="newlist_deatil_three gsmc">
                 <a href="http://special.zhaopin.com/bj/2011/lsw05120476/enter.html" target="_blank">
@@ -188,7 +188,7 @@ data_filter = {
     <li><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=8">8</a></li>
     <li><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=9" class="pagesmore">...</a></li>
     <li class="pagesDown-pos"><a href="http://sou.zhaopin.com/jobs/searchresult.ashx?jl=北京&kw=助理&sm=0&ga=立水桥&gc=5号线&gr=2&isfilter=1&fl=530&isadv=0&sg=c67ae20d31954238959da7915552c240&p=2" class="next-page">下一页</a>
-    <li class="nextpagego-box"><input type="hidden" id="guid" value="c67ae20d31954238959da7915552c240" />到&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;页<input type="text" class="pagesnum" name="goto" id="goto" value="1" onkeyup="zlapply.searchjob.fnCheckInt(this,event)" onchange="zlapply.searchjob.fnCheckInt(this,event)" onkeypress="zlapply.searchjob.enter2Page(this,event,51)"  /><button type="button" class="nextpagego-btn" name="go" onclick="zlapply.searchjob.gotoPage(this.form.goto.value,51,'','c67ae20d31954238959da7915552c240')"></button></li>
+    <li class="nextpagego-box"><input type="hidden" id="guid" value="c67ae20d31954238959da7915552c240" />到       页<input type="text" class="pagesnum" name="goto" id="goto" value="1" onkeyup="zlapply.searchjob.fnCheckInt(this,event)" onchange="zlapply.searchjob.fnCheckInt(this,event)" onkeypress="zlapply.searchjob.enter2Page(this,event,51)"  /><button type="button" class="nextpagego-btn" name="go" onclick="zlapply.searchjob.gotoPage(this.form.goto.value,51,'','c67ae20d31954238959da7915552c240')"></button></li>
     <li class="clearfix"></li>
 </ul>
 </div>
