重构框架。加强逻辑，加强代码效率。众多更新。

--- a/JobSeeker/智联招聘数据爬取准备(2)-招聘信息页面源码解析.MD
+++ b/JobSeeker/智联招聘数据爬取准备(2)-招聘信息页面源码解析.MD
@@ -2,8 +2,7 @@
 根据招聘列表里面跳转过来的详细招聘信息页面。爬虫再根据这里进行关键信息提取。
 相比于搜索列表页来说，这页内容很简单，而我们需要的也不多。
 不过需要注意的是，这里在职业信息之外还需要额外收集企业信息。
-虽然另外有专门的代码跳转到企业主页去搜集信息，但是阅读源码后发现，每家Special企业都可以自己定制网页，因此获取基本信息不方便。
-所以企业基本信息要在这一页就收集齐（基本信息和企业主页里是完全一样的）。
+虽然另外有专门的代码跳转到企业主页去搜集信息，但是阅读源码后发现，每家Special企业都可以自己定制网页，因此获取基本信息不方便。所以企业基本信息要在这一页就收集齐（基本信息和企业主页里是完全一样的）。
 下面开始简单分析下各处源码。
 
 ## 职位的头信息
